# Flame

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
.github/workflows/: CI.yml
.ralph/: x87-to-modern-leaf-translations.md  x87-to-modern-leaf-translations.state.json
dk2.icon/: icon.json
flame/: config.toml
libs/: CMakeLists.txt
libs/dkii_exe/: CMakeLists.txt
libs/dkii_exe/delinked/: CMakeLists.txt
libs/dkii_exe/genlib/: CMakeLists.txt
libs/kwd/: CMakeLists.txt
libs/lzma2/: Lzma2.h
macos/: AppIcon.icns  Info.plist  MetalInfo.plist  README.md  build-metal-host.zsh  build-metal-wrapper.zsh  build-wrapper.zsh  dk2-flame.zsh  dk2-flametal.zsh  dk2-metal-launcher.zsh  dk2-runner.zsh  dk2-wine-runner.zsh  dk2-wine-runner.zsh.user-experiment.bak  import-original-game.zsh  run-metal-dump.zsh  run-metal-game.zsh  test-metal-bridge.zsh
macos/native/: BridgeProducer.cpp  DK2BloomShaders.metal  DK2LegacyShaders.metal  DK2MeshShader.metal  DK2Metal.entitlements  DK2Metal.mm  DK2SceneMirror.cpp  DK2SceneMirror.h  DK2ShaderTypes.h  DK2Shaders.metal  DK2ShadowShaders.metal  DK2TextureScale.h  DK2TextureScale.mm  DK2WaterShader.metal  Info.plist
mapping/: DKII_EXE_v170.sgmap
mapping/ida/: sgmap_ida.py
mapping/references/: VaReloc.h
mapping/sgmap/: Global.h  LineIter.h  SGMap.h  ScopeLineIter.h  Struct.h  Type.h
resources/: CMakeLists.txt  readme.txt
src/: CMakeLists.txt  dkii_exe_functions.cpp  main.cpp  replace_globals.map  replace_globals.txt  replace_structs.txt
src/dk2/: AABB.cpp  CBridge.cpp  CCamera.cpp  CDefaultPlayerInterface.cpp  CEngineAnimMesh.cpp  CEngineAnimMeshAdd.cpp  CEngineAnimMeshBlend.cpp  CEngineDynamicMesh.cpp  CEngineStaticHeightFieldAdd.cpp  CEngineStaticMeshAdd.cpp  CEngineUnlitProceduralMesh.cpp  CNetworkCommunication.cpp  CPCEngineInterface.cpp  CRoom.cpp  CWorld.cpp  CameraPhaseProfile.cpp  CreateMeshes.cpp  CursorDrawer.cpp  CursorPresentation.h  DrawTexToBuf.cpp  EngineAnimShadows.cpp  EngineShadows.cpp  FtolPatch.cpp  HDCursor.cpp  Mat3x3f.cpp  MeshGpuEmit.h  MyCESurfHandle.cpp  MyComputerPlayer_drop_condition.h  MyDxMouse.cpp  MyGame.cpp  MyGameSession.cpp  MyScaledSurface.cpp  MyWindow.cpp  Obj57AD20.cpp  Obj57BCB0.cpp  Obj58EF60.cpp  PlayerCfg.cpp  Pos2i.cpp  RenderData.cpp  ShadowGpu.h  (+13 more)
src/dk2/button/: button_functions.cpp  button_types.h
src/dk2/components/: CComponent.cpp  CEntryComponent.cpp  CFrontEndComponent.cpp  CGameComponent.cpp  CNetworkComponent.cpp
src/dk2/engine/: CWindowTest.cpp  CWindowTest_R.h  DdModeList.cpp  DdModeList.h  WinCls_BullfrogLibScreen.cpp  WinEventHandlers.cpp  WinEventHandlers.h  ddraw_functions.cpp  draw_functions.cpp  game_engine.h  window_functions.cpp
src/dk2/entities/: CCreature.cpp  CCreatureExtended.h  creature_state.h  entities_type.h  object_type.h
src/dk2/gui/: CDefaultPlayerInterface_game_gui.cpp  CGuiManager.cpp  button_render.cpp  main_gui.cpp
src/dk2/math/: directional_lighting.h  int_float.h
src/dk2/network/: protocol.h
src/dk2/resources/: MyResources.cpp  filesystem.cpp
src/dk2/surface/: surface_functions.cpp
src/gog_patch_dll/: gog_cfg.cpp  gog_exports.cpp  gog_exports.h  gog_fake.cpp  gog_patch.cpp  gog_patch.h  sources.cmake
src/gog_patch_dll/fake/: FakeD3D3.cpp  FakeDevice3.cpp  FakeDirectDraw1.cpp  FakeDirectDraw1.h  FakeDirectDraw2.cpp  FakeDirectDraw4.cpp  FakeSurface.cpp  FakeSurface4.cpp  FakeSurface4.h  FakeTexture.cpp  FakeTexture.h
src/gog_patch_dll/metal_bridge/: DK2BridgeProtocol.h  (+3 more)
src/net/: net_LocalService_R.h
src/patches/: alternative_resources.cpp  alternative_resources.h  auto_network.cpp  flame_main.cpp  flame_main.h  flametal_main.cpp  flametal_main.h  game_version_patch.cpp  game_version_patch.h  inspect_tools.cpp  inspect_tools.h  limit_tps.cpp  logging.cpp  logging.h  micro_patches.cpp  micro_patches.h  original_compatible.cpp  original_compatible.h  protocol_dump.cpp  protocol_dump.h  registry_to_config.cpp  remember_window_location_and_size.cpp  remember_window_location_and_size.h  replace_heap.h  replace_mouse_dinput_to_user32.cpp  replace_mouse_dinput_to_user32.h  show_wireframe.cpp  show_wireframe.h  use_wheel_to_zoom.cpp  use_wheel_to_zoom.h  wine_support.cpp  wine_support.h
src/tools/: ExceptionWindow.cpp  ExceptionWindow.h  LoadedModules.h  bug_hunter.cpp  bug_hunter.h  command_line.h  console.h  flame_config.cpp  flame_config.h  flametal_config.cpp  flametal_config.h  hexdump.hpp  hexdump2.hpp  last_error.h  visual_debug.cpp
src/weanetr_dll/: BullfrogNET.h  DPlay.h  DnsResolver.h  MLDPlay.h  MySocket.h  NetworkServiceProvider.h  globals.h  logging.h  messages.h  protocol.h  structs.h  weanetr_memory.h
tests/aabb_difftest/: aabb_difftest.cpp
tests/ccamera_cull_difftest/: ccamera_cull_difftest.cpp  dk2_functions.h  dk2_globals.h
tests/directional_lighting_difftest/: directional_lighting_difftest.cpp
tests/field_sampler_difftest/: field_sampler_difftest.cs
tests/isqrt_difftest/: isqrt_difftest.cpp
tests/mat3x3f_difftest/: mat3x3f_difftest.cpp
tests/overlay_unmatte/: overlay_unmatte.cpp
tests/pos2i_difftest/: pos2i_difftest.cpp
tests/sub_57BBF0_difftest/: sub_57BBF0_difftest.cpp
tests/vec3d_difftest/: vec3d_difftest.cpp
tests/vec3f_difftest/: dk2_functions.h  vec3f_difftest.cpp
tests/vec3i_difftest/: vec3i_difftest.cpp
tools/: CMakeLists.txt  audit_knobs.py  curate_textures.py  extract_dk2_cursors.py  upscale_textures.py
tools/delinker/: CoffBuilder.h  dk2.h
tools/extract_fpo/: for_flame.py  for_flametal.py  my_pdb.py  pdb_types.py
tools/flame_loader/: CMakeLists.txt  Symbol.h  main.cpp
tools/flametal_loader/: CMakeLists.txt  Symbol.cpp  Symbol.h  dependency_injection.cpp  dependency_injection.h  logging.cpp  logging.h  main.cpp  resources.rc.in
tools/genapi/: CMakeLists.txt  dk2cxx.py  gen_struct_h.py  gen_utils.py  main.py  main_update_replace_globals.py  replace_structs.py
tools/genlib_dkii/: main.cpp
tools/ghidra-sync/: ImportSgmapSymbols.java  MaterializeSgmapFunctions.java  README.md
tools/kwd_dump/: CMakeLists.txt  main.cpp
tools/resource_compressor/: Fpo.h  main.cpp
(+59 files in other folders)
